@@ -5,6 +5,8 @@ Pending changes in the mainline
 * Store-SCU for patients and studies in Orthanc Explorer.
 * "Bulk" Store-SCU (send several DICOM instances with the same
   DICOM connexion).
+* Filtering of incoming DICOM instances (through Lua scripting).
+* Filtering of incoming HTTP requests (through Lua scripting).
 
 
 Version 0.5.1 (2013/04/17)
